--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -30,8 +30,7 @@
                     android:id="@+id/ivPlaceImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@mipmap/default_profile"
-                    android:layout_gravity="center_horizontal" />
+                    android:src="@mipmap/default_profile" />
 
             </LinearLayout>
 
