--- a/app/src/main/res/layout/view_input_text.xml
+++ b/app/src/main/res/layout/view_input_text.xml
@@ -12,7 +12,7 @@
         android:src="@mipmap/ic_email"
         android:layout_marginTop="15dp"
         android:padding="@dimen/paddingMinGlobal"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
