--- a/app/src/main/res/layout/dialog_gallery_icon.xml
+++ b/app/src/main/res/layout/dialog_gallery_icon.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/gridViewIcons"
-        android:layout_gravity="center" />
-</FrameLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="120dp"
+        android:horizontalSpacing="@dimen/paddingMediumGlobal"
+        android:numColumns="auto_fit"
+        android:padding="@dimen/paddingMediumGlobal"
+        android:verticalSpacing="@dimen/paddingMediumGlobal"/>
+</LinearLayout>
