--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,40 +19,15 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary" />
 
-        <!--app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:layout_collapseMode="pin"
-        app:theme="@style/CustomActionBar"-->
-
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/containerMain"
+        android:id="@+id/fl_main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:visibility="visible">
 
     </FrameLayout>
-
-    <!--<include layout="@layout/content_sign_up" />-->
-
-    <!--<android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />-->
-
-    <!-- Collapse
-    Set this for animation collapse
-    <android.support.design.widget.CollapsingToolbarLayout
-    android:id="@+id/collapser"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    app:contentScrim="?attr/colorPrimary"
-    app:expandedTitleMarginEnd="64dp"
-    app:expandedTitleMarginStart="48dp"
-    app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-    </android.support.design.widget.CollapsingToolbarLayout>-->
 
 </android.support.design.widget.CoordinatorLayout>
