--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -62,46 +62,21 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/paddingMaxGlobal"
+        android:padding="@dimen/paddingMinGlobal"
         android:background="@android:color/white"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal|bottom"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <Button
-            android:id="@+id/signUp"
+            android:id="@+id/b_access"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:background="@drawable/background_button"
             android:textColor="@android:color/white"
-            android:text="@string/signUp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/marginMaxGlobal"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/already_have_account"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/textSecondary"/>
-
-            <TextView
-                android:id="@+id/accessView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/access"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/colorPrimary"
-                android:paddingLeft="@dimen/paddingMinGlobal" />
-        </LinearLayout>
+            android:text="@string/access" />
 
     </LinearLayout>
 
