--- a/app/src/main/res/layout/view_input_text.xml
+++ b/app/src/main/res/layout/view_input_text.xml
@@ -9,26 +9,41 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_email"
+        android:src="@mipmap/ic_email_grey600_24dp"
         android:layout_marginTop="15dp"
         android:padding="@dimen/paddingMinGlobal"
         android:visibility="gone"/>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true"
-        app:counterOverflowTextAppearance="@style/CounterOverFlow"
-        app:counterTextAppearance="@style/Counter">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/editText"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:ems="10"/>
+            app:errorEnabled="false"
+            app:errorTextAppearance="@style/Error"
+            app:counterOverflowTextAppearance="@style/CounterOverFlow"
+            app:counterTextAppearance="@style/Counter">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text=""
+                android:ems="10"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            style="@style/ImageButtonCircle"
+            android:src="@mipmap/ic_visibility_off"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/marginMediumGlobal"
+            android:visibility="gone"/>
+    </FrameLayout>
 
 </LinearLayout>
