--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,6 +68,11 @@
         <item name="android:background">@android:color/darker_gray</item>
     </style>
 
+    <!--INPUT TEXT LAYOUT-->
+    <style name="Error" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:textColor">#FF7043</item>
+    </style>
+
     <style name="Counter" parent="TextAppearance.Design.Counter">
         <item name="android:textColor">#42A5F5</item>
     </style>
