login with fire base

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <attr name="iconImage" format="integer"/>
+
     <declare-styleable name="InputTextView">
-        <attr name="iconImage" format="integer"/>
+        <attr name="iconImage"/>
+        <attr name="errorEnabled" format="boolean"/>
         <attr name="maxLengthEnabled" format="boolean"/>
         <attr name="maxLength" format="integer"/>
         <attr name="hint" format="string"/>
+        <attr name="android:text"/>
         <attr name="android:inputType"/>
         <attr name="android:lines"/>
+    </declare-styleable>
+
+    <declare-styleable name="ImageTextView">
+        <attr name="iconImage"/>
+        <attr name="text1" format="string"/>
+        <attr name="text2" format="string"/>
+        <attr name="text3" format="string"/>
+        <attr name="iconButton" format="integer"/>
+        <attr name="android:singleLine"/>
+        <attr name="android:textStyle"/>
     </declare-styleable>
 </resources>
